Bug fixes and field renames